[build-system]
requires = [
    "hatchling",
    "loguru~=0.7",
    "httpx~=0.2"
]
build-backend = "hatchling.build"

[project]
name = "skular"
version = "0.0.1"
authors = [
    { name = "Rudransh Jagannath", email = "jrudransh@protonmail.com" },
]
description = "Utilities for Skular ERP"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://skular.in"
Issues = "https://github.com/Skularr/SkularUtils.git"